--- a/package.json
+++ b/package.json
@@ -8,15 +8,15 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^3.4.1",
+    "gatsby": "^4.17.0",
     "gatsby-plugin-feed": "^3.4.0",
-    "gatsby-plugin-gatsby-cloud": "^2.4.1",
+    "gatsby-plugin-gatsby-cloud": "^4.18.0-next.1",
     "gatsby-plugin-google-analytics": "^3.4.0",
     "gatsby-plugin-image": "^1.4.0",
     "gatsby-plugin-manifest": "^3.4.0",
     "gatsby-plugin-offline": "^4.4.0",
     "gatsby-plugin-react-helmet": "^4.4.0",
-    "gatsby-plugin-sharp": "^3.4.1",
+    "gatsby-plugin-sharp": "^4.17.0",
     "gatsby-remark-copy-linked-files": "^3.2.0",
     "gatsby-remark-images": "^4.2.0",
     "gatsby-remark-prismjs": "^4.2.0",
