Update bio and publications

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "gatsby": "^4.17.0",
+    "gatsby-cli": "^4.20.0",
     "gatsby-plugin-feed": "^3.4.0",
     "gatsby-plugin-gatsby-cloud": "^4.18.0-next.1",
     "gatsby-plugin-google-analytics": "^3.4.0",
