--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -16,7 +16,8 @@
   "component---src-pages-blog-js-c50935a37ad1cc70dad9.js.map": "component---src-pages-blog-js-c50935a37ad1cc70dad9.js.map",
   "component---src-pages-blog-js.js": "component---src-pages-blog-js-c50935a37ad1cc70dad9.js",
   "component---src-pages-index-js-67a5db02f3434790d846.js.map": "component---src-pages-index-js-67a5db02f3434790d846.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-67a5db02f3434790d846.js",
+  "component---src-pages-index-js-9cacbf095d3ecb0c376f.js.map": "component---src-pages-index-js-9cacbf095d3ecb0c376f.js.map",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-9cacbf095d3ecb0c376f.js",
   "component---src-pages-using-typescript-tsx-f72656945a5506048255.js.map": "component---src-pages-using-typescript-tsx-f72656945a5506048255.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-f72656945a5506048255.js",
   "component---src-templates-blog-post-js-4bf684ae57b845febbb0.js.map": "component---src-templates-blog-post-js-4bf684ae57b845febbb0.js.map",
@@ -79,7 +80,8 @@
   "static/montserrat-latin-900italic.woff": "static/montserrat-latin-900italic-efcaa0f6a82ee0640b83a0916e6e8d68.woff",
   "static/montserrat-latin-900italic.woff2": "static/montserrat-latin-900italic-4454c775e48152c1a72510ceed3603e2.woff2",
   "styles.css": "styles.b1637253b15454596926.css",
+  "webpack-runtime-267a2708ff6d794b4e84.js.map": "webpack-runtime-267a2708ff6d794b4e84.js.map",
   "webpack-runtime-daae70d725e27fdede66.js.map": "webpack-runtime-daae70d725e27fdede66.js.map",
   "webpack-runtime-dccc780104883e8f7542.js.map": "webpack-runtime-dccc780104883e8f7542.js.map",
-  "webpack-runtime.js": "webpack-runtime-dccc780104883e8f7542.js"
+  "webpack-runtime.js": "webpack-runtime-267a2708ff6d794b4e84.js"
 }
