--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -17,7 +17,8 @@
   "component---src-pages-blog-js.js": "component---src-pages-blog-js-c50935a37ad1cc70dad9.js",
   "component---src-pages-index-js-67a5db02f3434790d846.js.map": "component---src-pages-index-js-67a5db02f3434790d846.js.map",
   "component---src-pages-index-js-9cacbf095d3ecb0c376f.js.map": "component---src-pages-index-js-9cacbf095d3ecb0c376f.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-9cacbf095d3ecb0c376f.js",
+  "component---src-pages-index-js-e5652bcdaf4177f0d582.js.map": "component---src-pages-index-js-e5652bcdaf4177f0d582.js.map",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-e5652bcdaf4177f0d582.js",
   "component---src-pages-using-typescript-tsx-f72656945a5506048255.js.map": "component---src-pages-using-typescript-tsx-f72656945a5506048255.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-f72656945a5506048255.js",
   "component---src-templates-blog-post-js-4bf684ae57b845febbb0.js.map": "component---src-templates-blog-post-js-4bf684ae57b845febbb0.js.map",
@@ -83,5 +84,6 @@
   "webpack-runtime-267a2708ff6d794b4e84.js.map": "webpack-runtime-267a2708ff6d794b4e84.js.map",
   "webpack-runtime-daae70d725e27fdede66.js.map": "webpack-runtime-daae70d725e27fdede66.js.map",
   "webpack-runtime-dccc780104883e8f7542.js.map": "webpack-runtime-dccc780104883e8f7542.js.map",
-  "webpack-runtime.js": "webpack-runtime-267a2708ff6d794b4e84.js"
+  "webpack-runtime-fcdf56bb40de0121a363.js.map": "webpack-runtime-fcdf56bb40de0121a363.js.map",
+  "webpack-runtime.js": "webpack-runtime-fcdf56bb40de0121a363.js"
 }
