--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -21,7 +21,8 @@
   "component---src-pages-blog-js.js": "component---src-pages-blog-js-fdbbf4d9a96c44199084.js",
   "component---src-pages-index-js-2164aa36879f0a501c54.js.map": "component---src-pages-index-js-2164aa36879f0a501c54.js.map",
   "component---src-pages-index-js-5cb30c655451ca72acbb.js.map": "component---src-pages-index-js-5cb30c655451ca72acbb.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-2164aa36879f0a501c54.js",
+  "component---src-pages-index-js-d9657afe7672f8241f39.js.map": "component---src-pages-index-js-d9657afe7672f8241f39.js.map",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-d9657afe7672f8241f39.js",
   "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js",
   "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map": "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map",
@@ -85,7 +86,8 @@
   "static/montserrat-latin-900italic.woff2": "static/montserrat-latin-900italic-4454c775e48152c1a72510ceed3603e2.woff2",
   "styles.css": "styles.58094c3ef0f514b37713.css",
   "webpack-runtime-12673d65c46284dfb4e5.js.map": "webpack-runtime-12673d65c46284dfb4e5.js.map",
+  "webpack-runtime-409f7b7ca812c9de74ee.js.map": "webpack-runtime-409f7b7ca812c9de74ee.js.map",
   "webpack-runtime-6fd78d7e71209ef73d26.js.map": "webpack-runtime-6fd78d7e71209ef73d26.js.map",
   "webpack-runtime-e7f69ad92b77916e2df9.js.map": "webpack-runtime-e7f69ad92b77916e2df9.js.map",
-  "webpack-runtime.js": "webpack-runtime-6fd78d7e71209ef73d26.js"
+  "webpack-runtime.js": "webpack-runtime-409f7b7ca812c9de74ee.js"
 }
