--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -19,12 +19,13 @@
   "component---src-pages-404-js.js": "component---src-pages-404-js-0de819376661c433aa44.js",
   "component---src-pages-blog-js-fdbbf4d9a96c44199084.js.map": "component---src-pages-blog-js-fdbbf4d9a96c44199084.js.map",
   "component---src-pages-blog-js.js": "component---src-pages-blog-js-fdbbf4d9a96c44199084.js",
+  "component---src-pages-index-js-215391ba487af2295ac4.js.map": "component---src-pages-index-js-215391ba487af2295ac4.js.map",
   "component---src-pages-index-js-2164aa36879f0a501c54.js.map": "component---src-pages-index-js-2164aa36879f0a501c54.js.map",
   "component---src-pages-index-js-5cb30c655451ca72acbb.js.map": "component---src-pages-index-js-5cb30c655451ca72acbb.js.map",
   "component---src-pages-index-js-6b47230923ff82edf3ae.js.map": "component---src-pages-index-js-6b47230923ff82edf3ae.js.map",
   "component---src-pages-index-js-c9c3815188ae16a53093.js.map": "component---src-pages-index-js-c9c3815188ae16a53093.js.map",
   "component---src-pages-index-js-d9657afe7672f8241f39.js.map": "component---src-pages-index-js-d9657afe7672f8241f39.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-6b47230923ff82edf3ae.js",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-215391ba487af2295ac4.js",
   "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js",
   "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map": "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map",
@@ -91,7 +92,8 @@
   "webpack-runtime-409f7b7ca812c9de74ee.js.map": "webpack-runtime-409f7b7ca812c9de74ee.js.map",
   "webpack-runtime-6fd78d7e71209ef73d26.js.map": "webpack-runtime-6fd78d7e71209ef73d26.js.map",
   "webpack-runtime-a7670aa74d25c9fd5f5c.js.map": "webpack-runtime-a7670aa74d25c9fd5f5c.js.map",
+  "webpack-runtime-a93f3783ea8e3a66f832.js.map": "webpack-runtime-a93f3783ea8e3a66f832.js.map",
   "webpack-runtime-cdf6dc0a515ea3f8d804.js.map": "webpack-runtime-cdf6dc0a515ea3f8d804.js.map",
   "webpack-runtime-e7f69ad92b77916e2df9.js.map": "webpack-runtime-e7f69ad92b77916e2df9.js.map",
-  "webpack-runtime.js": "webpack-runtime-cdf6dc0a515ea3f8d804.js"
+  "webpack-runtime.js": "webpack-runtime-a93f3783ea8e3a66f832.js"
 }
