--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -25,7 +25,8 @@
   "component---src-pages-index-js-6b47230923ff82edf3ae.js.map": "component---src-pages-index-js-6b47230923ff82edf3ae.js.map",
   "component---src-pages-index-js-c9c3815188ae16a53093.js.map": "component---src-pages-index-js-c9c3815188ae16a53093.js.map",
   "component---src-pages-index-js-d9657afe7672f8241f39.js.map": "component---src-pages-index-js-d9657afe7672f8241f39.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-215391ba487af2295ac4.js",
+  "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js.map": "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js.map",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js",
   "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js",
   "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map": "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map",
@@ -91,9 +92,10 @@
   "webpack-runtime-12673d65c46284dfb4e5.js.map": "webpack-runtime-12673d65c46284dfb4e5.js.map",
   "webpack-runtime-409f7b7ca812c9de74ee.js.map": "webpack-runtime-409f7b7ca812c9de74ee.js.map",
   "webpack-runtime-6fd78d7e71209ef73d26.js.map": "webpack-runtime-6fd78d7e71209ef73d26.js.map",
+  "webpack-runtime-a0134bc00b191d78a5f2.js.map": "webpack-runtime-a0134bc00b191d78a5f2.js.map",
   "webpack-runtime-a7670aa74d25c9fd5f5c.js.map": "webpack-runtime-a7670aa74d25c9fd5f5c.js.map",
   "webpack-runtime-a93f3783ea8e3a66f832.js.map": "webpack-runtime-a93f3783ea8e3a66f832.js.map",
   "webpack-runtime-cdf6dc0a515ea3f8d804.js.map": "webpack-runtime-cdf6dc0a515ea3f8d804.js.map",
   "webpack-runtime-e7f69ad92b77916e2df9.js.map": "webpack-runtime-e7f69ad92b77916e2df9.js.map",
-  "webpack-runtime.js": "webpack-runtime-a93f3783ea8e3a66f832.js"
+  "webpack-runtime.js": "webpack-runtime-a0134bc00b191d78a5f2.js"
 }
