--- a/assets-manifest.json
+++ b/assets-manifest.json
@@ -23,10 +23,11 @@
   "component---src-pages-index-js-2164aa36879f0a501c54.js.map": "component---src-pages-index-js-2164aa36879f0a501c54.js.map",
   "component---src-pages-index-js-5cb30c655451ca72acbb.js.map": "component---src-pages-index-js-5cb30c655451ca72acbb.js.map",
   "component---src-pages-index-js-6b47230923ff82edf3ae.js.map": "component---src-pages-index-js-6b47230923ff82edf3ae.js.map",
+  "component---src-pages-index-js-9661e16249fb1656274f.js.map": "component---src-pages-index-js-9661e16249fb1656274f.js.map",
   "component---src-pages-index-js-c9c3815188ae16a53093.js.map": "component---src-pages-index-js-c9c3815188ae16a53093.js.map",
   "component---src-pages-index-js-d9657afe7672f8241f39.js.map": "component---src-pages-index-js-d9657afe7672f8241f39.js.map",
   "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js.map": "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js.map",
-  "component---src-pages-index-js.js": "component---src-pages-index-js-dd2e2c8205c5d4f33fb0.js",
+  "component---src-pages-index-js.js": "component---src-pages-index-js-9661e16249fb1656274f.js",
   "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js.map",
   "component---src-pages-using-typescript-tsx.js": "component---src-pages-using-typescript-tsx-caf83dcc23974937b928.js",
   "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map": "component---src-templates-blog-post-js-cd676194af83e7aa0f45.js.map",
@@ -90,6 +91,7 @@
   "static/montserrat-latin-900italic.woff2": "static/montserrat-latin-900italic-4454c775e48152c1a72510ceed3603e2.woff2",
   "styles.css": "styles.58094c3ef0f514b37713.css",
   "webpack-runtime-12673d65c46284dfb4e5.js.map": "webpack-runtime-12673d65c46284dfb4e5.js.map",
+  "webpack-runtime-34250f68257b226e1a3f.js.map": "webpack-runtime-34250f68257b226e1a3f.js.map",
   "webpack-runtime-409f7b7ca812c9de74ee.js.map": "webpack-runtime-409f7b7ca812c9de74ee.js.map",
   "webpack-runtime-6fd78d7e71209ef73d26.js.map": "webpack-runtime-6fd78d7e71209ef73d26.js.map",
   "webpack-runtime-a0134bc00b191d78a5f2.js.map": "webpack-runtime-a0134bc00b191d78a5f2.js.map",
@@ -97,5 +99,5 @@
   "webpack-runtime-a93f3783ea8e3a66f832.js.map": "webpack-runtime-a93f3783ea8e3a66f832.js.map",
   "webpack-runtime-cdf6dc0a515ea3f8d804.js.map": "webpack-runtime-cdf6dc0a515ea3f8d804.js.map",
   "webpack-runtime-e7f69ad92b77916e2df9.js.map": "webpack-runtime-e7f69ad92b77916e2df9.js.map",
-  "webpack-runtime.js": "webpack-runtime-a0134bc00b191d78a5f2.js"
+  "webpack-runtime.js": "webpack-runtime-34250f68257b226e1a3f.js"
 }
